Fixed gigs sort by menu z-index error

--- a/src/pages/gigs/Gigs.scss
+++ b/src/pages/gigs/Gigs.scss
@@ -88,7 +88,7 @@
           position: absolute;
           top: 30px;
           right: 0;
-          z-index: 9;
+          z-index: 0;
           display: flex;
           flex-direction: column;
           gap: 20px;
